Refactor persistence layer: fix ID propagation, implement deep join mapping, and strengthen transaction stability